@@ -133,6 +133,10 @@ li ul {
   }
 }
 
+.break {
+  word-wrap: break-word;
+}
+
 code,
 pre,
 samp {
