@@ -69,6 +69,15 @@ section: fe-guidelines
 </div>
 <div class="flex flex-spacebetween mb2 onmobile-flex-column">
   <div class="w49">
+    <pre class=" language-markup"><code>&lt;span <strong>class="break"</strong>&gt;Lorem ipsum dolor&lt;/span&gt;
+</code></pre>
+  </div>
+  <div class="w49 flex-self-vcenter">
+      Applies only <code>word-wrap: break-word;</code> to element (when hyphenation is not needed)
+  </div>
+</div>
+<div class="flex flex-spacebetween mb2 onmobile-flex-column">
+  <div class="w49">
     <pre class=" language-markup"><code>&lt;p <strong>class="alignright"</strong>&gt;Right-aligned text.&lt;/p&gt;
 </code></pre>
   </div>
