@@ -3,6 +3,7 @@
 ## New 
 
 - added `dropDown-content--wide` modifier (super large drop down, for advanced search)
+- added `break` helper
 
 
 # [1.6.17] - 2019-06-25
